--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <div id="root"></div>
 
     <script src="index.jsx" defer type="text/babel"></script>
-    <script src="components/groceryList.jsx" defer type="text/babel"></script>
+    <script src="components/GroceryList.jsx" defer type="text/babel"></script>
   </body>
 </html>
